# DispensaryMiniApp

./: .env.certbot.example  .env.example  .gitignore  README  docker-compose.yml  init_cert.sh
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/cli/: create_superuser.py
backend/data/: doctors_uzi.json  doctors_xray.json  fill_data.py  fill_inspections.py
backend/src/: config.py  main.py
backend/src/api/: dependencies.py  exception_handlers.py  exceptions.py  params.py
backend/src/database/: core.py
backend/src/models/: __init__.py  doctors.py  equipments.py  inspections.py  mixins.py  types.py  users.py
backend/src/repositories/: base.py  departments.py  doctors.py  equipment_types.py  equipments.py  equitments.py  exceptions.py  inspections.py  specialities.py  users.py
backend/src/schemas/: auth.py  base.py  departments.py  doctors.py  equipments.py  equitments.py  files.py  inspections.py  pagination.py  specialities.py  users.py
backend/src/services/: auth.py  departments.py  doctors.py  equipment_types.py  equipments.py  exceptions.py  files.py  inspections.py  specialities.py  users.py
backend/src/utils/: auth.py  exceptions.py  files.py
backend/tests/: conftest.py  core.py  test_auth.py  test_departments.py  test_doctors.py  test_equipment_types.py  test_equipments.py  test_inspections.py  test_specalties.py  test_upload.py  test_users.py  utils.py
backend/tests/fixtures/: fixture_clients.py  fixture_data.py  fixture_db.py  fixture_departments.py  fixture_doctor.py  fixture_doctors.py  fixture_image.py  (+5 more)
(+192 files in other folders)
