[project]
name = "backend"
version = "0.1.0"
authors = [
    { name = "SoundOfTruth", email = "catastrophist@mail.ru" }
]
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "fastapi>=0.128.0",
    "pydantic-settings>=2.12.0",
    "sqlalchemy[asyncio]>=2.0.45",
    "uvicorn>=0.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "isort>=7.0.0",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]
