[project]
name = "backend"
version = "0.1.0"
authors = [
    { name = "SoundOfTruth", email = "catastrophist@mail.ru" }
]
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "aiosqlite>=0.22.1",
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "fastapi>=0.128.0",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "pyjwt[crypto]>=2.12.1",
    "python-multipart>=0.0.27",
    "sqlalchemy[asyncio]>=2.0.45",
    "uvicorn>=0.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "httpx>=0.28.1",
    "isort>=7.0.0",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]
